validation fix